force-app/main/default/objects/PAF_Corp_Hotel__c/PAF_Corp_Hotel__c.object-meta.xml
<CustomObject>
    <label>PAF Corp Hotel</label>
    <nameField>
        <displayFormat>Hotel - {00000}</displayFormat>
        <label>PAF Corp Hotel Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PAF Corp Hotel</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>