force-app/main/default/objects/PAF_Corp_Hotel__c/fields/Excite_Booking_Number__c.field-meta.xml
<CustomField>
    <fullName>Excite_Booking_Number__c</fullName>
    <label>Excite Booking Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>