force-app/main/default/objects/PAF_Corp_Hotel__c/fields/Excite_Form_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Excite_Form_of_Payment__c</fullName>
    <label>Excite Form of Payment</label>
    <length>20</length>
    <type>Text</type>
</CustomField>