force-app/main/default/objects/PAF_Corp_Hotel__c/fields/Excite_Nett__c.field-meta.xml
<CustomField>
    <fullName>Excite_Nett__c</fullName>
    <label>Excite Nett</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>