force-app/main/default/objects/PAF_Corp_Hotel__c/fields/Hotel1__c.field-meta.xml
<CustomField>
    <fullName>Hotel1__c</fullName>
    <formula>Hotel_Margin__c /  Total_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hotel(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>