force-app/main/default/objects/PAF_Corp_Hotel__c/fields/Hotel__c.field-meta.xml
<CustomField>
    <fullName>Hotel__c</fullName>
    <label>Hotel</label>
    <referenceTo>PAF_Corp_Travel_Bookings__c</referenceTo>
    <relationshipLabel>PAF Corp Hotel</relationshipLabel>
    <relationshipName>PAF_Corp_Hotel</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>