force-app/main/default/objects/PAF_Corp_Hotel__c/fields/Hotel_Check_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Check_Out_Date__c</fullName>
    <label>Hotel Check Out Date</label>
    <type>Date</type>
</CustomField>