force-app/main/default/objects/PAF_Corp_Hotel__c/fields/Hotel_Margin__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Margin__c</fullName>
    <formula>Total_Cost__c -  Excite_Nett__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hotel Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>