force-app/main/default/objects/PAF_Corp_Hotel__c/fields/No_of_Nights__c.field-meta.xml
<CustomField>
    <fullName>No_of_Nights__c</fullName>
    <formula>Hotel_Check_Out_Date__c  -  Hotel_Check_In_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Nights</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>